# fractal-gen

./: .gitignore  Cargo.toml  README.md
src/: frac_type.rs  get_options.rs  input.rs  main.rs  options.rs
src/functions/: calculate_part.rs  get_options.rs  mod.rs  value_calc.rs
