[package]
name = "fractals"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
image = "*"
frac-lib = { git = "https://github.com/Dudu7352/frac-gen", branch = "release"}
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"]}